[gd_scene load_steps=8 format=3 uid="uid://upmtn3idlurk"]

[ext_resource type="Script" path="res://Scripts/Courses.gd" id="1_5mr0q"]
[ext_resource type="FontFile" uid="uid://ku183lio56ft" path="res://Fonts/ShadowsIntoLight-Regular.ttf" id="1_cjde8"]
[ext_resource type="FontFile" uid="uid://sdv1lenydq2d" path="res://Fonts/handwritten_font_50.tres" id="2_vy3fd"]
[ext_resource type="PackedScene" uid="uid://bui582ui6ga8j" path="res://Scenes/Calculus_I/Calculus_I.tscn" id="4_i1vy5"]
[ext_resource type="PackedScene" uid="uid://bdedn8kbcywij" path="res://Scenes/Calculus_II.tscn" id="5_c04du"]
[ext_resource type="PackedScene" uid="uid://bt3tyrnsm5wpw" path="res://Scenes/Calculus_III.tscn" id="6_xah52"]
[ext_resource type="PackedScene" uid="uid://kw7nw1w121oc" path="res://Scenes/Differential_Equations.tscn" id="7_22h8r"]

[node name="Courses" type="Node2D"]
script = ExtResource("1_5mr0q")

[node name="Background" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
offset_right = 1024.0
offset_bottom = 576.0
color = Color(0.886275, 0.905882, 0.701961, 1)

[node name="UI" type="Node2D" parent="."]

[node name="Label" type="Label" parent="UI"]
offset_right = 1024.0
offset_bottom = 144.0
theme_override_colors/font_color = Color(0.423529, 0.423529, 0.423529, 1)
theme_override_fonts/font = ExtResource("1_cjde8")
theme_override_font_sizes/font_size = 100
text = "Courses"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="Node2D" parent="UI"]

[node name="GridContainer" type="GridContainer" parent="UI/Buttons"]
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.836
anchor_bottom = 1.0
offset_top = 162.0
offset_right = 1024.0
offset_bottom = 414.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Calculus_I" type="Button" parent="UI/Buttons/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.423529, 0.423529, 0.423529, 1)
theme_override_fonts/font = ExtResource("2_vy3fd")
theme_override_font_sizes/font_size = 50
action_mode = 0
text = "Calculus I"
flat = true
icon_alignment = 1

[node name="Calculus_II" type="Button" parent="UI/Buttons/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.423529, 0.423529, 0.423529, 1)
theme_override_fonts/font = ExtResource("2_vy3fd")
theme_override_font_sizes/font_size = 50
action_mode = 0
text = "Calculus II"
flat = true
icon_alignment = 1

[node name="Calculus_III" type="Button" parent="UI/Buttons/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.423529, 0.423529, 0.423529, 1)
theme_override_fonts/font = ExtResource("2_vy3fd")
theme_override_font_sizes/font_size = 50
action_mode = 0
text = "Calculus III"
flat = true
icon_alignment = 1

[node name="Differential_Equations" type="Button" parent="UI/Buttons/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.423529, 0.423529, 0.423529, 1)
theme_override_fonts/font = ExtResource("2_vy3fd")
theme_override_font_sizes/font_size = 50
action_mode = 0
text = "Differential Equations"
flat = true
icon_alignment = 1

[node name="Calculus_I" parent="." instance=ExtResource("4_i1vy5")]
visible = false

[node name="Calculus_II" parent="." instance=ExtResource("5_c04du")]
visible = false

[node name="Calculus_III" parent="." instance=ExtResource("6_xah52")]
visible = false

[node name="Differential_Equations" parent="." instance=ExtResource("7_22h8r")]
visible = false

[connection signal="pressed" from="UI/Buttons/GridContainer/Calculus_I" to="." method="_on_calculus_i_pressed"]
[connection signal="pressed" from="UI/Buttons/GridContainer/Calculus_II" to="." method="_on_calculus_ii_pressed"]
[connection signal="pressed" from="UI/Buttons/GridContainer/Calculus_III" to="." method="_on_calculus_iii_pressed"]
[connection signal="pressed" from="UI/Buttons/GridContainer/Differential_Equations" to="." method="_on_differential_equations_pressed"]
